{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 25,
  "lineage": "5308a46b-208f-c85b-6eb4-5b18dcf8fb01",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-077e31c4939f6a2f3",
            "arn": "arn:aws:ec2:us-east-2:292903354615:instance/i-055611f30d396c088",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-055611f30d396c088",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0894697f6b6449a95",
            "private_dns": "ip-10-0-0-149.us-east-2.compute.internal",
            "private_ip": "10.0.0.149",
            "public_ip": "18.224.1.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a8290f6ec8bcb752",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e815dbc03b4569fe",
            "tags": {
              "Name": "ExampleAppServerInstance"
            },
            "tags_all": {
              "Name": "ExampleAppServerInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-042fa535ab378ce3f"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.example2",
            "aws_vpc.example1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:292903354615:internet-gateway/igw-0bcec30c2b4c655c1",
            "id": "igw-0bcec30c2b4c655c1",
            "owner_id": "292903354615",
            "vpc_id": "vpc-0fb2bb2ed1bc76438"
          },
          "dependencies": [
            "aws_vpc.example1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:292903354615:route-table/rtb-092e2e2862fcbda47",
            "id": "rtb-092e2e2862fcbda47",
            "owner_id": "292903354615",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bcec30c2b4c655c1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0fb2bb2ed1bc76438"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.example1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebe59afc40046d42",
            "route_table_id": "rtb-092e2e2862fcbda47",
            "subnet_id": "subnet-0e815dbc03b4569fe"
          },
          "dependencies": [
            "aws_subnet.example2",
            "aws_vpc.example1",
            "aws_internet_gateway.ig",
            "aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:292903354615:security-group/sg-042fa535ab378ce3f",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042fa535ab378ce3f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "292903354615",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fb2bb2ed1bc76438"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:292903354615:subnet/subnet-0f83facf3bf69e5e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f83facf3bf69e5e7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "292903354615",
            "vpc_id": "vpc-0fb2bb2ed1bc76438"
          },
          "dependencies": [
            "aws_vpc.example1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:292903354615:subnet/subnet-0e815dbc03b4569fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0e815dbc03b4569fe",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "292903354615",
            "tags": {
              "Name": "Main1"
            },
            "tags_all": {
              "Name": "Main1"
            },
            "vpc_id": "vpc-0fb2bb2ed1bc76438"
          },
          "dependencies": [
            "aws_vpc.example1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:292903354615:vpc/vpc-0fb2bb2ed1bc76438",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07c2f6b0b22d989a1",
            "default_route_table_id": "rtb-0b79739179034e9ab",
            "default_security_group_id": "sg-0014e3bbf1acfa36b",
            "dhcp_options_id": "dopt-f035529b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fb2bb2ed1bc76438",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b79739179034e9ab",
            "owner_id": "292903354615"
          }
        }
      ]
    }
  ]
}